Implemented new/updated requirements.

--- a/views/post-types/teach_material.html.twig
+++ b/views/post-types/teach_material.html.twig
@@ -78,7 +78,7 @@
         </div>
     {% endif %}
 
-    {% include 'navigations/sub-tabs/sub-content-tabs.html.twig' {tabs: post.tabs} %}
+    {% include 'navigations/sub-tabs/sub-content-tabs.html.twig' with {tabs: post.tabs} %}
 
 {% endblock article_content %}
 
