--- a/views/navigations/signpost/signpost-item.html.twig
+++ b/views/navigations/signpost/signpost-item.html.twig
@@ -1,6 +1,6 @@
 <article class="col-12 col-md-6 col-lg-4">
     <a class="card signpost-card border-0 h-100 text-dark text-decoration-none" href="{{ post.path }}">
-        {% set image_src = post.thumbnail.src|default(get_image(post.meta('_menu_image')).src|default) %}
+        {% set image_src = post.thumbnail.src %}
         {% if image_src|default %}
             <div class="w-100 card-img card-img-top mx-auto mt-4 ratio ratio-16x9 rounded rounded-2"
                  style="background-image: url({{ image_src }})">
