--- a/views/layout/header.html.twig
+++ b/views/layout/header.html.twig
@@ -10,7 +10,7 @@
             </a>
         </h1>
         <nav class="col-12 col-md-9 order-0 order-md-1 primary-menu text-uppercase" role="navigation">
-            {% include "navigations/menu/menu.html.twig" with {'items': menu.primary.get_items} %}
+            {% include "navigations/menu/menu.html.twig" with {'items': menu.primary.get_items, is_header: true} %}
         </nav>
     </div>
     <div class="row collapse" id="searchCollapse">
