Implemented new/updated requirements.

--- a/views/navigations/menu/menu.html.twig
+++ b/views/navigations/menu/menu.html.twig
@@ -11,7 +11,7 @@
                 <!--suppress HtmlUnknownAnchorTarget -->
                 <a itemprop="url"
                    class="px-4 py-2"
-                   data-toggle="collapse"
+                   data-bs-toggle="collapse"
                    href="#searchCollapse"
                    role="button"
                    aria-expanded="false"
