--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -129,7 +129,9 @@ a {
     }
 
     @media (max-width: 1000px) {
-      font-size: .9em;
+      & {
+        font-size: .9em;
+      }
     }
   }
 }
