--- a/views/layout/main-banner.html.twig
+++ b/views/layout/main-banner.html.twig
@@ -18,7 +18,7 @@
                 </small>
             {%- endif -%}
             #}
-            {{- title|length > 0 ? title : post.title ?? 'Stránka nenalezena' -}}
+            {{- post.title ?? title ?? 'Stránka nenalezena' -}}
         </h2>
     </div>
 </header>
