--- a/views/layout/header.html.twig
+++ b/views/layout/header.html.twig
@@ -25,7 +25,7 @@
                        placeholder="Hledané slovo"
                        aria-label="Vyhledávání"
                        aria-describedby="basic-addon1">
-                <button class="btn btn-outline-secondary" type="button">Hledat</button>
+                <button class="btn btn-outline-secondary" type="submit">Hledat</button>
             </div>
         </form>
     </div>
