Implemented new/updated requirements.

--- a/views/layout/header.html.twig
+++ b/views/layout/header.html.twig
@@ -16,16 +16,19 @@
     <div class="row collapse" id="searchCollapse">
         <form action="/" method="get">
             <div class="col-12 input-group my-2">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon1">🔎</span>
-                </div>
+                <label for="search-input">
+                    <span class="input-group-text btn btn-outline-secondary" id="basic-addon1">🔎</span>
+                </label>
                 <input type="search"
+                       id="search-input"
                        name="s"
                        class="form-control"
                        placeholder="Hledané slovo"
                        aria-label="Vyhledávání"
                        aria-describedby="basic-addon1">
-                <button class="btn btn-outline-secondary" type="submit">Hledat</button>
+                <button class="btn btn-outline-secondary" type="submit">
+                    Hledat
+                </button>
             </div>
         </form>
     </div>
