Implemented new/updated requirements.

--- a/views/layout/header.html.twig
+++ b/views/layout/header.html.twig
@@ -16,9 +16,7 @@
     <div class="row collapse" id="searchCollapse">
         <form action="/" method="get">
             <div class="col-12 input-group my-2">
-                <label for="search-input">
-                    <span class="input-group-text btn btn-outline-secondary" id="basic-addon1">🔎</span>
-                </label>
+                <label for="search-input" class="btn btn-outline-secondary" id="basic-addon1">🔎</label>
                 <input type="search"
                        id="search-input"
                        name="s"
