Implemented new/updated requirements.

--- a/views/layout/header.html.twig
+++ b/views/layout/header.html.twig
@@ -18,6 +18,7 @@
             <div class="col-12 input-group my-2">
                 <label for="search-input" class="btn btn-outline-secondary" id="basic-addon1">🔎</label>
                 <input type="search"
+                       required
                        id="search-input"
                        name="s"
                        class="form-control"
