Implemented new/updated requirements.

--- a/views/custom-templates/teach_material_cat_vernier.html.twig
+++ b/views/custom-templates/teach_material_cat_vernier.html.twig
@@ -2,7 +2,7 @@
 
 {% block article_header %}
     <!-- DUMP HERE: -->
-    {{  dump(post.thumbnails) }}
+    {{  dump(post.tabThumbnails) }}
     {% set thumbnail = post.tabThumbnail(subtype) %}
     {{  dump(thumbnail) }}
     {% include 'layout/main-banner.html.twig'
