--- a/views/custom-templates/teach_material_cat_vernier.html.twig
+++ b/views/custom-templates/teach_material_cat_vernier.html.twig
@@ -2,7 +2,7 @@
 
 {% block article_header %}
     {% set thumbnail = post.tabThumbnail(subtype) %}
-    <!-- DUMP: {{ thumbnail }} -->
+    <!-- DUMP: {{ get_image(thumbnail).src }} -->
     {% include 'layout/main-banner.html.twig'
         with {image: thumbnail ? get_image(thumbnail).src : (post ? post.thumbnail : null), title: title|default(post.title)} %}
 {% endblock article_header %}
