--- a/views/custom-templates/teach_material_cat_vernier.html.twig
+++ b/views/custom-templates/teach_material_cat_vernier.html.twig
@@ -1,10 +1,9 @@
 {% extends "post-types/teach_material_cat.html.twig" %}
 
 {% block article_header %}
-    {% set thumbnail = post.tabThumbnail(subtype) %}
-    <!-- DUMP: {{ get_image(thumbnail).src }} -->
+    {% set thumbnail = get_image(post.tabThumbnail(subtype)).src %}
     {% include 'layout/main-banner.html.twig'
-        with {image: thumbnail ? get_image(thumbnail).src : (post ? post.thumbnail : null), title: title|default(post.title)} %}
+        with {image: thumbnail ? thumbnail : (post ? post.thumbnail : null), title: title|default(post.title)} %}
 {% endblock article_header %}
 
 {% block article_content %}
