--- a/views/layout/main-banner.html.twig
+++ b/views/layout/main-banner.html.twig
@@ -1,4 +1,4 @@
-{% set imageSrc = image.src|default(site.theme.link ~ '/images/photos/foto.png') %}
+{% set imageSrc = image.src|default(image|default(site.theme.link ~ '/images/photos/foto.png')) %}
 
 <header class="row page-banner bg-primary text-white mb-3 border border-primary border-2">
     <div class="d-flex col-12 col-lg-5 m-0 p-0">
