--- a/views/layout/footer.html.twig
+++ b/views/layout/footer.html.twig
@@ -13,7 +13,7 @@
 <footer id="footer-main" class="bg-primary text-light">
     <div class="container p-4">
         <div class="row">
-            <aside class="col-12 col-lg">
+            <aside class="col-12 col-md-7">
                 {% if sidebars.footer_left|default %}
                     {{ sidebars.footer_left|default }}
                 {% endif %}
@@ -23,7 +23,7 @@
                     </nav>
                 {% endif %}
             </aside>
-            <aside class="col-12 col-lg">
+            <aside class="col-12 col-md-5">
                 {% if sidebars.footer_center|default %}
                     {{ sidebars.footer_center|default }}
                 {% endif %}
