--- a/views/layout/footer.html.twig
+++ b/views/layout/footer.html.twig
@@ -13,26 +13,42 @@
 <footer id="footer-main" class="bg-primary text-light">
     <div class="container p-4">
         <div class="row">
-            <aside class="col-12 col-md-7">
-                {% if sidebars.footer_left|default %}
-                    {{ sidebars.footer_left|default }}
-                {% endif %}
-                {% if menu.footer_left.get_items %}
-                    <nav role="navigation">
-                        {% include "navigations/menu/menu.html.twig" with {'items': menu.footer_left.get_items} %}
-                    </nav>
-                {% endif %}
-            </aside>
-            <aside class="col-12 col-md-5">
-                {% if sidebars.footer_center|default %}
-                    {{ sidebars.footer_center|default }}
-                {% endif %}
-                {% if menu.footer_center.get_items %}
-                    <nav role="navigation">
-                        {% include "navigations/menu/menu.html.twig" with {'items': menu.footer_center.get_items} %}
-                    </nav>
-                {% endif %}
-            </aside>
+            {% if sidebars.footer_left|default or menu.footer_left.get_items|default %}
+                <aside class="col-12 col-lg">
+                    {% if sidebars.footer_left|default %}
+                        {{ sidebars.footer_left|default }}
+                    {% endif %}
+                    {% if menu.footer_left.get_items %}
+                        <nav role="navigation">
+                            {% include "navigations/menu/menu.html.twig" with {'items': menu.footer_left.get_items} %}
+                        </nav>
+                    {% endif %}
+                </aside>
+            {% endif %}
+            {% if sidebars.footer_center|default or menu.footer_center.get_items|default %}
+                <aside class="col-12 col-lg">
+                    {% if sidebars.footer_center|default %}
+                        {{ sidebars.footer_center|default }}
+                    {% endif %}
+                    {% if menu.footer_center.get_items %}
+                        <nav role="navigation">
+                            {% include "navigations/menu/menu.html.twig" with {'items': menu.footer_center.get_items} %}
+                        </nav>
+                    {% endif %}
+                </aside>
+            {% endif %}
+            {% if sidebars.footer_right|default or menu.footer_right.get_items|default %}
+                <aside class="col-12 col-lg">
+                    {% if sidebars.footer_right|default %}
+                        {{ sidebars.footer_right|default }}
+                    {% endif %}
+                    {% if menu.footer_right.get_items %}
+                        <nav role="navigation">
+                            {% include "navigations/menu/menu.html.twig" with {'items': menu.footer_right.get_items} %}
+                        </nav>
+                    {% endif %}
+                </aside>
+            {% endif %}
         </div>
     </div>
 </footer>
