--- a/views/post-types/teach_material_cat.html.twig
+++ b/views/post-types/teach_material_cat.html.twig
@@ -3,8 +3,8 @@
 {# Page with list of teaching materials. #}
 
 {% block body_header %}
-    {{ block('body_header') }}
-    <!-- CATEGORY: '{{ dump(categories) }}', SUB: '{{ subtype }}' -->
+    {{ parent() }}
+    <!-- CATEGORY: '{{ dump(categoryNames) }}', SUB: '{{ subtype }}' -->
 {% endblock %}
 
 {% block article_content %}
