--- a/views/post-previews/_post_preview_horizontal_search.html.twig
+++ b/views/post-previews/_post_preview_horizontal_search.html.twig
@@ -6,6 +6,11 @@
                 {{- post.title -}}
                 {{- post.meta('_alternative_names')|default ? ' <small>(' ~ post.meta('_alternative_names') ~ ')</small>'  : '' -}}
             </h3>
+            {% if post.parent %}
+            <h4>
+                <small>{{ post.parent.title }}</small>
+            </h4>
+            {% endif %}
         </a>
         <div style="text-align: justify;">
             {{ post.post_excerpt }}
@@ -15,7 +20,7 @@
         </nav>
     </div>
 
-    {% set image_src = post.thumbnail.src|default(get_image(post.meta('_menu_image')).src|default %}
+    {% set image_src = post.thumbnail.src|default(get_image(post.meta('_menu_image')).src|default) %}
     {% if image_src|default and image_src|length > 0 %}
         <div class="col-12 col-md-4 col-lg-3 d-flex flex-column justify-content-center">
             <a href="{{ post.link }}"
