Implemented new/updated requirements.

--- a/views/layout/header.html.twig
+++ b/views/layout/header.html.twig
@@ -16,7 +16,7 @@
     <div class="row collapse" id="searchCollapse">
         <form action="/" method="get">
             <div class="col-12 input-group my-2">
-                <label for="search-input" class="btn btn-outline-secondary" id="basic-addon1">🔎</label>
+                <label for="search-input" class="btn btn-outline-primary" id="basic-addon1">🔎</label>
                 <input type="search"
                        required
                        id="search-input"
@@ -25,7 +25,7 @@
                        placeholder="Hledané slovo"
                        aria-label="Vyhledávání"
                        aria-describedby="basic-addon1">
-                <button class="btn btn-outline-secondary" type="submit">
+                <button class="btn btn-outline-primary" type="submit">
                     Hledat
                 </button>
             </div>
