--- a/views/post-types/search.html.twig
+++ b/views/post-types/search.html.twig
@@ -7,6 +7,10 @@
             <section class="row mt-3 mb-5 g-5 justify-content-md-center">
                 {% for post in posts %}
                     {% include 'post-previews/_post_preview_horizontal_search.html.twig' %}
+                {% else %}
+                    <div class="col-12">
+                        <p>Nebyly nalezeny žádné stránky odpovídající vyhledávacím kritériím.</p>
+                    </div>
                 {% endfor %}
             </section>
         </nav>
