--- a/views/layout/header.html.twig
+++ b/views/layout/header.html.twig
@@ -17,6 +17,7 @@
         <div class="col-12 input-group my-2 px-0">
             <label for="search-input" class="btn btn-outline-primary" id="basic-addon1">🔎</label>
             <input type="search"
+                   value="{{ search|default }}"
                    required
                    id="search-input"
                    name="s"
