--- a/views/navigations/menu/menu.html.twig
+++ b/views/navigations/menu/menu.html.twig
@@ -10,12 +10,11 @@
             <li class="{{ item.classes | join(' ') }}">
                 <!--suppress HtmlUnknownAnchorTarget -->
                 <a itemprop="url"
-                   class="px-4 py-2 {{ search|default ? 'show' : '' }}"
+                   class="px-4 py-2"
                    data-bs-toggle="collapse"
-                   data-bs-
                    href="#searchCollapse"
                    role="button"
-                   aria-expanded="{{ search|default ? true : false }}"
+                   aria-expanded="false"
                    aria-controls="searchCollapse">
                     <span itemprop="name">🔎</span>
                 </a>
