--- a/views/layout/header.html.twig
+++ b/views/layout/header.html.twig
@@ -13,8 +13,8 @@
             {% include "navigations/menu/menu.html.twig" with {'items': menu.primary.get_items, is_header: true} %}
         </nav>
     </div>
-    <form action="/" method="get" class="row collapse" id="searchCollapse">
-        <div class="col-12 input-group my-2 px-0  {{ search|default ? 'show' : '' }}">
+    <form action="/" method="get" class="row collapse  {{ search|default ? 'show' : '' }}" id="searchCollapse">
+        <div class="col-12 input-group my-2 px-0">
             <label for="search-input" class="btn btn-outline-primary" id="basic-addon1">🔎</label>
             <input type="search"
                    value="{{ search|default }}"
