--- a/views/post-types/search.html.twig
+++ b/views/post-types/search.html.twig
@@ -6,7 +6,7 @@
         {% if posts|default and posts|length > 0 %}
             {% for post in posts %}
                 {% include 'post-previews/_post_preview_horizontal_search.html.twig' %}
-                {{ dd(post) }}
+                {{ dump(post) }}
             {% endfor %}
         {% else %}
             <div class="col-12">
