Implemented new/updated requirements.

--- a/views/custom-templates/periodical-table.html.twig
+++ b/views/custom-templates/periodical-table.html.twig
@@ -14,6 +14,21 @@ This page theme can be selected as custom theme of single "page" type post (due 
                 </div>
             </div>
         {% endblock periodical_table %}
+        {# -------------------------- #}
+        {#            CALC            #}
+        <div class="row molcalc">
+
+            <label class="col-12">
+                <input name="formula" class="molcalc_formula">
+            </label>
+
+            <table class="molcalc_table">
+            </table>
+
+        </div>
+        {#         CALC END           #}
+        {# -------------------------- #}
+
     </main>
 {% endblock %}
 
