--- a/views/page-layout.html.twig
+++ b/views/page-layout.html.twig
@@ -66,5 +66,7 @@ DEFAULT PAGE TEMPLATE - Used (directly or through inheritance) by every other pa
     {{ function('wp_footer') }}
 {% endblock body_footer %}
 
+{% block js %}{% endblock js %}
+
 </body>
 </html>
