Implemented new/updated requirements.

--- a/views/custom-templates/periodical-table.html.twig
+++ b/views/custom-templates/periodical-table.html.twig
@@ -19,7 +19,7 @@ This page theme can be selected as custom theme of single "page" type post (due 
         <div class="row molcalc">
 
             <label class="col-12">
-                <input name="formula" class="molcalc_formula">
+                <input name="formula" class="molcalc_formula form-control">
             </label>
 
             <table class="molcalc_table">
