Implemented new/updated requirements.

--- a/views/custom-templates/periodical-table.html.twig
+++ b/views/custom-templates/periodical-table.html.twig
@@ -16,7 +16,8 @@ This page theme can be selected as custom theme of single "page" type post (due 
         {% endblock periodical_table %}
         {# -------------------------- #}
         {#            CALC            #}
-        <div class="row molcalc">
+        <div class="row molcalc my-3">
+            <h3>Kalkulačka</h3>
 
             <label class="col-12">
                 <input name="formula" class="molcalc_formula form-control">
