Implemented new/updated requirements.

--- a/views/custom-templates/periodical-table.html.twig
+++ b/views/custom-templates/periodical-table.html.twig
@@ -17,15 +17,15 @@ This page theme can be selected as custom theme of single "page" type post (due 
         {# -------------------------- #}
         {#            CALC            #}
         <div class="row molcalc my-3">
-            <h3>Kalkulačka</h3>
-
-            <label class="col-12">
+            <div class="col-12">
+                <h3>Kalkulačka</h3>
+            </div>
+            <label class="col-12 my-2">
                 <input name="formula" class="molcalc_formula form-control">
             </label>
-
-            <table class="molcalc_table">
+            <table class="col-12 my-2 molcalc_table">
+                <!-- -->
             </table>
-
         </div>
         {#         CALC END           #}
         {# -------------------------- #}
