Implemented new/updated requirements.

--- a/views/custom-templates/periodical-table.html.twig
+++ b/views/custom-templates/periodical-table.html.twig
@@ -23,7 +23,7 @@ This page theme can be selected as custom theme of single "page" type post (due 
             <label class="col-12 my-2">
                 <input name="formula" class="molcalc_formula form-control">
             </label>
-            <table class="col-12 my-2 molcalc_table">
+            <table class="col-12 table my-2 molcalc_table">
                 <!-- -->
             </table>
         </div>
