--- a/views/layout/main-banner.html.twig
+++ b/views/layout/main-banner.html.twig
@@ -3,7 +3,7 @@
 <header class="row page-banner bg-primary text-white mb-3 border border-primary border-2">
     <div class="d-flex col-12 col-lg-5 m-0 p-0">
         <div class="ratio ratio-16x9"
-             style="background-position: center center; background-size: cover; background-image: url({{ imageSrc }})">
+             style="background-color: white; background-position: center center; background-size: cover; background-image: url({{ imageSrc }})">
         </div>
     </div>
     <div class="col-12 col-lg-7 title-box d-flex flex-column justify-content-center text-center">
