--- a/views/post-types/single-map_company.html.twig
+++ b/views/post-types/single-map_company.html.twig
@@ -1,7 +1,7 @@
 {% extends "post-types/page.html.twig" %}
 
 {% block article_content %}
-    <section class="row my-3">
+    <section class="row">
         <div class="col pb-0 text-justify">
             <p>{{ post.post_excerpt|default }}</p>
         </div>
