--- a/views/post-types/teach_material.html.twig
+++ b/views/post-types/teach_material.html.twig
@@ -4,7 +4,7 @@
     <!-- VYUKOVY MATERIAL -->
 
     {% if post.meta('_youtube_video_url') %}
-        <div class="row my-5 mb-3 pt-5">
+        <div class="row pt-5">
             <div class="col-12 col-md-2 d-flex flex-column align-items-center justify-content-center">
                 {% for symbol in post.difficultySymbols %}
                     <div class="p-4">
