--- a/views/single-customs/single-industry-material.html.twig
+++ b/views/single-customs/single-industry-material.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block article_content %}
-    <section class="row my-5">
+    <section class="row">
         <div class="col-12">
             <h3>
                 {{- post.title -}}
