--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -4,13 +4,13 @@
 
 {% block article_content %}
     {% if post.content|default %}
-        <div class="row mt-5">
+        <div class="row">
             <div class="col-12">
                 {{ post.content }}
             </div>
         </div>
     {% endif %}
-    <nav class="nav row mt-2 rounded-tabs" id="nav-tab">
+    <nav class="nav row rounded-tabs" id="nav-tab">
         {% set tabs = ['Mapa', 'Podklady pro exkurze'] %}
         {% for index, tab in tabs %}
             {% set active = index < 1 ? 'active' : '' %}
