--- a/views/custom-templates/periodical-table.html.twig
+++ b/views/custom-templates/periodical-table.html.twig
@@ -6,7 +6,7 @@ This page theme can be selected as custom theme of single "page" type post (due 
 #}
 
 {% block article_content %}
-    <main class="container content-wrapper my-5 mx-0 px-0">
+    <main class="container content-wrapper mx-0 px-0">
         {% block periodical_table %}
             <div class="row post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
                 <div class="col-12">
