--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -2,7 +2,7 @@
 
 {% block article_content %}
     {% if (post.content|default and post.content|length > 0) or (content|default and content|length > 0) %}
-        <div class="row my-5">
+        <div class="row">
             <div class="col-12">
                 {{ post.content|default(content|default) }}
             </div>
@@ -11,7 +11,7 @@
 
     {% include 'navigations/sub-tabs/sub-tabs.html.twig' %}
 
-    <div class="row mt-0 mb-5 px-2">
+    <div class="row mt-0 px-2">
         {% for material in materials %}
             {% include 'post-previews/_photo_preview_vertical.twig' with {post: material} %}
         {% endfor %}
