--- a/views/single-customs/single-equation-category.html.twig
+++ b/views/single-customs/single-equation-category.html.twig
@@ -4,7 +4,7 @@
     {{ parent('article_content') }}
 
     {% if equations|length > 0 %}
-        <div class="row my-5 border-1 border-primary border-top my-5 py-3 px-3">
+        <div class="row my-5 border-1 border-primary border-top py-3 px-3">
             <div class="col-12">
                 <h3 class="mt-3 mb-2">Řešené příklady</h3>
                 <div class="swiper-container">
@@ -39,7 +39,6 @@
         </div>
     {% endif %}
 {% endblock %}
-
 
 {% block article_signpost %}
 {% endblock %}
