--- a/views/single-customs/single-industry_field.html.twig
+++ b/views/single-customs/single-industry_field.html.twig
@@ -5,7 +5,7 @@
 
 {% block article_content %}
     {% if post.content|default %}
-        <section class="row my-5">
+        <section class="row">
             <div class="col-12">
                 <div>
                     {{ post.content }}
