--- a/views/navigations/signpost/signpost.html.twig
+++ b/views/navigations/signpost/signpost.html.twig
@@ -1,9 +1,7 @@
 {% if posts|default and posts|length > 0 %}
-    <nav>
-        <section class="row my-3 g-5 justify-content-md-center">
-            {% for post in posts %}
-                {% include 'navigations/signpost/signpost-item.html.twig' %}
-            {% endfor %}
-        </section>
+    <nav class="row my-3 g-5 justify-content-md-center">
+        {% for post in posts %}
+            {% include 'navigations/signpost/signpost-item.html.twig' %}
+        {% endfor %}
     </nav>
 {% endif %}
