--- a/views/navigations/signpost/signpost.html.twig
+++ b/views/navigations/signpost/signpost.html.twig
@@ -1,5 +1,5 @@
 {% if posts|default and posts|length > 0 %}
-    <nav class="row my-3 g-5 justify-content-md-center">
+    <nav class="row g-5 justify-content-md-center">
         {% for post in posts %}
             {% include 'navigations/signpost/signpost-item.html.twig' %}
         {% endfor %}
