Implemented new/updated requirements.

--- a/views/layout/footer.html.twig
+++ b/views/layout/footer.html.twig
@@ -10,7 +10,7 @@
     </footer>
 {% endif %}
 
-<footer id="footer-main" class="bg-primary text-light mt-5">
+<footer id="footer-main" class="bg-primary text-light">
     <div class="container p-4">
         <div class="row">
             {% if sidebars.footer_left|default or menu.footer_left.get_items|default %}
