Implemented new/updated requirements.

--- a/views/layout/header.html.twig
+++ b/views/layout/header.html.twig
@@ -3,10 +3,11 @@
 <header id="header" class="container website-header mt-0 mt-lg-2 mb-3">
     <div class="row justify-content-evenly">
         {# Logo and (hidden) name/title of website. #}
-        <h1 class="d-flex align-items-stretch align-content-stretch col-12 col-md-3 order-1 order-md-0 fs-6 fs-lg-5 py-1 py-lg-2"
-            style="min-height: 3em;">
+        <h1 class="col-12 col-md-3 order-1 order-md-0 fs-6 fs-lg-5 py-1 py-lg-2 p-0"
+            style="min-height: 4em;">
             <a href="{{ site.url }}"
                rel="home"
+               class="d-block w-100 h-100"
                style="background-image: url({{ logo }}); background-position-x: left; background-position-y: center;">
                 <span class="d-none">{{ site.name }}</span>
             </a>
