Implemented new/updated requirements.

--- a/views/layout/header.html.twig
+++ b/views/layout/header.html.twig
@@ -8,7 +8,7 @@
             <a href="{{ site.url }}"
                rel="home"
                class="d-block w-100 h-100"
-               style="background-image: url({{ logo }}); background-position-x: left; background-position-y: center;">
+               style="background-image: url({{ logo }}); background-position-x: left; background-position-y: center; background-size: contain; background-repeat: no-repeat">
                 <span class="d-none">{{ site.name }}</span>
             </a>
         </h1>
