--- a/views/single-customs/single-chemical_element.html.twig
+++ b/views/single-customs/single-chemical_element.html.twig
@@ -55,7 +55,7 @@
                          id="nav-{{ index }}"
                          role="tabpanel"
                          aria-labelledby="nav-tab-{{ index }}">
-                        {{ post.meta(tab.key)|default }}
+                        {{ tabContent }}
                     </div>
                     {% set iter = iter + 1 %}
                 {% endif %}
